--- a/src/css/style.css
+++ b/src/css/style.css
@@ -68,7 +68,9 @@ button{
         transform: rotate(360deg);
     }
 }
-/* 
-@media only screen and (max-width:700px){
 
-} */
+@media only screen and (max-width:700px){
+    button{
+        width: 12vw;
+    }
+}
